; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/misc/sgi-xp/extr_xpc_uv.c_xpc_assume_partition_disengaged_uv.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/misc/sgi-xp/extr_xpc_uv.c_xpc_assume_partition_disengaged_uv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { %struct.xpc_partition_uv }
%struct.xpc_partition_uv = type { i32, i32 }

@xpc_partitions = common dso_local global %struct.TYPE_4__* null, align 8
@XPC_P_ENGAGED_UV = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i16)* @xpc_assume_partition_disengaged_uv to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @xpc_assume_partition_disengaged_uv(i16 signext %0) #0 {
  %2 = alloca i16, align 2
  %3 = alloca %struct.xpc_partition_uv*, align 8
  %4 = alloca i64, align 8
  store i16 %0, i16* %2, align 2
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** @xpc_partitions, align 8
  %6 = load i16, i16* %2, align 2
  %7 = sext i16 %6 to i64
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i64 %7
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  store %struct.xpc_partition_uv* %10, %struct.xpc_partition_uv** %3, align 8
  %11 = load %struct.xpc_partition_uv*, %struct.xpc_partition_uv** %3, align 8
  %12 = getelementptr inbounds %struct.xpc_partition_uv, %struct.xpc_partition_uv* %11, i32 0, i32 0
  %13 = load i64, i64* %4, align 8
  %14 = call i32 @spin_lock_irqsave(i32* %12, i64 %13)
  %15 = load i32, i32* @XPC_P_ENGAGED_UV, align 4
  %16 = xor i32 %15, -1
  %17 = load %struct.xpc_partition_uv*, %struct.xpc_partition_uv** %3, align 8
  %18 = getelementptr inbounds %struct.xpc_partition_uv, %struct.xpc_partition_uv* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = and i32 %19, %16
  store i32 %20, i32* %18, align 4
  %21 = load %struct.xpc_partition_uv*, %struct.xpc_partition_uv** %3, align 8
  %22 = getelementptr inbounds %struct.xpc_partition_uv, %struct.xpc_partition_uv* %21, i32 0, i32 0
  %23 = load i64, i64* %4, align 8
  %24 = call i32 @spin_unlock_irqrestore(i32* %22, i64 %23)
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
